--- a/static/css/index.css
+++ b/static/css/index.css
@@ -155,3 +155,10 @@ body {
 #interpolation-image-wrapper img {
   border-radius: 5px;
 }
+
+table {
+  display: block;
+  overflow-x: auto;
+  white-space: nowrap;
+  border: none;
+}
