--- a/static/css/leaderboard.css
+++ b/static/css/leaderboard.css
@@ -1,16 +1,16 @@
 table {
-    border: 1px solid black;
+    border: 1px solid #ddd;
     border-collapse: collapse;
 }
 
 th {
     padding: 2px 5px;
-    border: 1px solid black;
+    border: 1px solid #ddd;
 }
 
 td {
     padding: 2px 5px;
-    border: 1px solid black;
+    border: 1px solid #ddd;
 }
 
 thead {
